# trade-api

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  config.py  main.py  pyproject.toml  server.py
models/: schema.py
security/: auth.py  jwt.py  rate_limit.py
services/: ai_service.py  markdown_report.py  trade_search.py
utils/: session.py
